m/k/k3d-dfd-cluster-dex/resource-ingress-dex.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: dex.dev.amanibhavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 5556
